# namada-faucet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  justfile  rust-toolchain.toml
.github/workflows/: docker.yml
scripts/: faucet.py
src/: app.rs  app_state.rs  config.rs  lib.rs  main.rs
src/dto/: faucet.rs  mod.rs  network.rs  node.rs
src/entity/: faucet.rs
src/error/: api.rs  faucet.rs  mod.rs  validate.rs
src/handler/: faucet.rs
src/repository/: faucet.rs
src/response/: faucet.rs  mod.rs
src/sdk/: client.rs  error.rs  masp.rs  mod.rs  namada.rs  utils.rs  wallet.rs
src/services/: faucet.rs
src/state/: faucet.rs
src/utils/: mod.rs  pow.rs  requests.rs
