[package]
name = "namada-faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tower-log"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
    "buffer",
] }
tower-http = { version = "0.4.4", features = [
    "compression-full",
    "limit",
    "trace",
    "cors",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
lazy_static = "1.4.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
validator = { version = "0.16.0", features = ["derive"] }
async-trait = "0.1.73"
chrono = { version = "0.4.30", features = ["serde"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
dotenvy = "0.15.7"
hex = "0.4.3"
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.30.0", default-features = false, features = ["tendermint-rpc", "std", "async-client", "async-send", "download-params"] }
tendermint-config = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"]}
orion = "0.17.5"
data-encoding = "2.4.0"
reqwest = "0.11.20"
zeroize = "1.6.0"
axum-macros = "0.3.8"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }

[profile.ephemeral-build]
inherits = "release"
incremental = false
lto = "thin"
opt-level = 2
codegen-units = 64
strip = "symbols"
debug = false

[profile.release]
incremental = false